Work on SmoGraphicalEditor

--- a/SmoWebBase/SmoGraphicalEditor/SmoGUI.html
+++ b/SmoWebBase/SmoGraphicalEditor/SmoGUI.html
@@ -16,9 +16,17 @@
         <script src="http://draw2d.org/draw2d_touch/jsdoc_5/draw2d/src/draw2d.js"></script>
         <!-- jQuery UI -->
 		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 		
 		<script src="js/SmoGui.js"></script>
 		<script src="js/shapes.js"></script>
+		<script src="js/jsonData.json"></script>
+		
+		<!-- ContextMenu -->
+		<link rel="stylesheet" href="css/jquery.contextMenu.css">
+		<script src="js/contextMenu/jquery.ui.position.js"></script>
+		<script src="js/contextMenu/jquery.contextMenu.js"></script>
+		
 		<script src="js/jsonData.json"></script>
         
         <script>			
@@ -43,7 +51,8 @@
 										myShape = new MyCircle();
 									}
 									app.canvas.add(myShape, cloneOffset.left - app.canvas.getAbsoluteX(), 
-									cloneOffset.top - app.canvas.getAbsoluteY());		
+									cloneOffset.top - app.canvas.getAbsoluteY());
+									console.log(myShape);	
 								}
 					});
 				});
@@ -64,6 +73,16 @@
 			<span><button onclick="app.console.clear()">Clear</button></span>
 			<span><button onclick="app.canvas.updateJson()">Json</button></span></div>
 		<div id="events"></div>
+	</div>
+	<div id="properties-dialog"> 
+	  <form>
+	    <fieldset>
+	      <label for="length">Length</label>
+	      <input type="number" name="length" id="length" value="10" class="text ui-widget-content ui-corner-all">
+	      <label for="height">Height</label>
+	      <input type="number" name="height" id="height" value="1" class="text ui-widget-content ui-corner-all">
+	    </fieldset>
+	  </form>
 	</div>
 </body>
 </html>
