--- a/SmoWebBase/SmoGraphicalEditor/SmoGUI.html
+++ b/SmoWebBase/SmoGraphicalEditor/SmoGUI.html
@@ -31,55 +31,20 @@
         <script>			
 			var app;
 			$(document).ready(function() {
-				app = new smoGui.Application("app")
+				//Initializing the app
+				app = new smoGui.Application("app");
 				app.addCanvas("canvas", {width: 1000, height: 430});
-				var componentTypes = app.addComponentTypes(componentDefinitions);
-				$.each(componentTypes, function(index, element){
-					$('#components > ul').append('<li id="' + element + '">' + element + '</li>');
-				});
+				app.addComponentTypes(componentDefinitions);
 				app.addCircuit(circuit);
-				var componetFiguresArr = app.getComponetFigures();
-				for (var i=0; i<componetFiguresArr.length; i++) {
-					smoGui.addComponentModal(componetFiguresArr[i]);
-				}
-				$('#components > ul > li').each(function(index, element){
-					$(element)
-					.draggable({
-								appendTo: "body",
-								helper: "clone",
-								start: function(e, ui)
-								{
-								  $(ui.helper).css("list-style-type", "none");
-								},
-								stop: function(event, ui) {
-									var myShape;
-									var	name;
-									var cloneOffset = ui.helper.offset();
-									var id = $(this).context.id;
-									do {
-										myShape = eval('new app.componentTypes.' + id + '()');
-									} while ((id+myShape.count) in app.circuit.componentFigures);
-									do {
-										name = prompt("Please enter component name", id+myShape.count);
-									} while (name == "");
-									if (name == null) {
-										return;
-									}
-									myShape.name = name;
-									app.circuit.componentFigures[name] = myShape.getId();
-									app.canvas.add(myShape, cloneOffset.left - app.canvas.getAbsoluteX(), 
-									cloneOffset.top - app.canvas.getAbsoluteY());
-									smoGui.addComponentModal(myShape);
-								}
-					});
-				});
+				//Creating UI components list
+				smoGui.createUIList(app, "#components");
 			});
         </script>
 </head>
 <body id="container">
 	<div id="canvas" style="border: 3px solid grey;"></div>
-	<div id="components" style="width: 200px; height: 650px; position: absolute; top: 10px; left: 1050px; border: 3px solid green; overflow-y: auto;">
-		<ul style="list-style-type: none;"></ul>
+	<div style="width: 200px; height: 650px; position: absolute; top: 10px; left: 1050px; border: 3px solid green; overflow-y: auto;">
+		<ul id="components" style="list-style-type: none;"></ul>
 	</div>
 	<div id="console" style="width: 1000px; height: 200px; position: absolute; top: 460px; border: 3px solid blue; overflow-y: auto;">
 		<div id="console-header" style="margin-bottom: 5px;">
