Implemented keyboard policy
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/SmoGraphicalEditor/SmoGUI.html
+++ b/SmoWebBase/SmoGraphicalEditor/SmoGUI.html
@@ -82,7 +82,7 @@
 	</div>
   </div>
   <div id="component-modals-container">
-	<div ng-repeat="(name, component) in smoGuiApp.circuit.components">
+	<div ng-repeat="(name, component) in smoGuiApp.components">
 		<div smo-modal="component"></div>
 	</div>
   </div>
