Improved json structure
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/SmoGraphicalEditor/SmoGUI.html
+++ b/SmoWebBase/SmoGraphicalEditor/SmoGUI.html
@@ -75,7 +75,7 @@
 			<div id="console-header" style="margin-bottom: 5px;">
 				Console 
 				<span><button ng-click="smoGuiApp.console.clear()">Clear</button></span>
-				<span><button ng-click="smoGuiApp.canvas.dumpToJson()">Dump to Json</button></span>
+				<span><button ng-click="smoGuiApp.exportCircuit()">Dump to Json</button></span>
 			</div>
 			<div id="events"></div>
 		</div>
